小程序的样式 — wxss

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,5 @@
-<view>
-  <text>hello ~</text>
+<view class="container vertical centered">
+  <view>
+    <text class="header">hello ~</text>
+  </view>
 </view>
