--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class="container vertical centered">
   <view>
-    <text class="header">hello ~</text>
+    <text class="header">{{ greeting }}</text>
   </view>
 </view>
