--- a/pages/wxml/wxml.wxml
+++ b/pages/wxml/wxml.wxml
@@ -1,8 +1,21 @@
-<import src="../templates/header.wxml" />
 <view class="container vertical centered">
 
-  <template is="header" data="{{ ...header }}" />
-  
+  <view
+     id="header"
+     class="header"
+     style="color: #6435c9"
+   >
+     <text
+       data-title="views"
+       bindtap="tapHandler"
+       hidden="{{ false }}"
+       wx:if="{{ true }}"
+     >
+       views
+     </text>
+   </view>
+   <icon type="info" color="#6435c9" size="40" />
+
 </view>
 <view class="image">
   <image src="/assets/images/landscape.png"></image>
