--- a/pages/wxml/wxml.wxss
+++ b/pages/wxml/wxml.wxss
@@ -1,3 +1,15 @@
+movable-area {
+  width: 100vw;
+  height: 50vh;
+  background: #ededed;
+}
+
+movable-view {
+  width: 80px;
+  height: 80px;
+  background: #6435c9;
+}
+
 image {
   width: 100%;
 }
