--- a/pages/wxml/wxml.wxml
+++ b/pages/wxml/wxml.wxml
@@ -3,19 +3,15 @@
 
     <form bindsubmit="formSubmit">
 
-      <!-- <checkbox-group name="checkbox" bindchange="inputHandler">
-        <label wx:for="{{ items }}" wx:key="key">
-          <text>{{ item.name }}</text>
-          <checkbox value="{{ item.value }}" />
-        </label>
-      </checkbox-group> -->
-
-      <radio-group name="radio" bindchange="inputHandler">
-        <label wx:for="{{ items }}" wx:key="key">
-          <text>{{ item.name }}</text>
-          <radio value="{{ item.value }}" />
-        </label>
-      </radio-group>
+      <picker
+        range="{{ items }}"
+        bindchange="inputHandler"
+        name="picker"
+      >
+        <view>
+          <text>{{ items[pick] }}</text>
+        </view>
+      </picker>
 
       <button form-type="submit">提交</button>
 
